// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries and Mutations Testing creates a schedule 1`] = `
Object {
  "data": Object {
    "createSchedule": null,
  },
  "errors": Array [
    [GraphQLError: insert into "schedules" ("day_of_week", "doctor_clinic_uid", "end_time", "schedule_uid", "start_time") values ($1, $2, $3, $4, $5) returning * - insert or update on table "schedules" violates foreign key constraint "schedules_doctor_clinic_uid_foreign"],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries and Mutations Testing deletes a schedule 1`] = `
Object {
  "data": Object {
    "deleteSchedule": null,
  },
  "errors": Array [
    [GraphQLError: SCHEDULE DOES NOT EXIST.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries and Mutations Testing fetches a schedule 1`] = `
Object {
  "data": Object {
    "getSchedule": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries and Mutations Testing updates a schedule 1`] = `
Object {
  "data": Object {
    "updateSchedule": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read property 'schedule_uid' of undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries and Mutations Testing upserts a schedule 1`] = `
Object {
  "data": Object {
    "upsertSchedule": null,
  },
  "errors": Array [
    [GraphQLError: Key (doctor_clinic_uid)=(0353121f-eeed-4687-8676-f788d3e9c8e6) is not present in table "doctor_clinics".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
